# Meta-LRPINN-pub

./: README.md  environment.yml  install_env.sh  pyproject.toml
metalrpinn/: losses.py  meta_test.py  meta_train.py  models.py  utils.py
scripts/: run_metatest.sh  run_metatrain.sh
