[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Meta-LRPINN"
authors = [
    {name = "Shijun Cheng", email = "shijun.cheng@kaust.edu.sa"},
]
description = "Multi-frequency wavefield solutions for variable velocity models using meta-learning enhanced low-rank physics-informed neural network"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Seismic modeling", "PINN", "Low-rank", "Meta-learning"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
//        "numpy >= 1.22.0",
//        "torch>=1.10.1",
//        "pylops >= 2.0.0",
// 	      "setuptools >= 61.2.0",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
